# ReusWorld

./: .gitignore  CMakeLists.txt  allopatric.env.json  baseline.plant.json  dynamic.eco.json  dynamic_topology.env.json  dynamic_water.env.json  initial.plant.json  peripatric.env.json  uniform.eco.json
configs/: BOCData.config  CGP.config  EnvCGP.config  EnvCTRL.config  Environment.config  Metabolism.config  PTree.config  Plant.config  Simulation.config  Visualization.config  synchronize.data
misc/: heat.ggb
model/: metabolism.tex
scripts/: controller_to_pdf.sh  extract_field.sh  extract_results.sh  field_dynamics.sh  format_dependencies_data.sh  global_settings.sh  local_run.sh  make_summary.sh  make_t_test.sh  make_video.sh  plant_dynamics.sh  plot_compatibility_matrices.sh  plot_field_dynamics.sh  plot_timelines.sh  plot_voxels.sh  save_local_run.sh  setup_with_dependencies.sh  sliding_window.awk  species_dynamics.sh  synchronize_remote_results.sh  synchronize_repos.sh  ttest2.octave  view_sumup.sh  violin_plot.gp
scripts/naturalisation/: pve_evaluation.sh  pve_summary.sh  species_dynamics_v2.sh
src/: phylogenyviewer.cpp  simulator.cpp  timelines.cpp  visualizer.cpp
src/cgp/: cgp.h  cgpwrapper.cpp  cgpwrapper.h  minicgp.cpp  minicgp.h  minicgp_blindwatchmaker.cpp  minicgp_test.cpp
src/config/: dependencies.cpp  dependencies.h  simuconfig.cpp  simuconfig.h  visuconfig.cpp  visuconfig.h
src/genotype/: config.h  ecosystem.cpp  ecosystem.h  envcgp.cpp  envcgp.h  environment.cpp  environment.h  genepool.cpp  genepool.h  grammar.cpp  grammar.h  plant.cpp  plant.h
src/misc/: analyzer.cpp  autocalibrator.cpp  saveequalasserter.cpp
src/naturalisation/: common.cpp  common.h  main.cpp  pve.cpp  pvesimulation.cpp  pvesimulation.h  pvp.cpp  pvpsimulation.cpp  pvpsimulation.h  simulation.cpp  simulation.h
src/simu/: environment.cpp  environment.h  organ.cpp  organ.h  phylogenystats.hpp  physicstypes.hpp  plant.cpp  plant.h  simulation.cpp  simulation.h  tiniestphysicsengine.cpp  tiniestphysicsengine.h  types.cpp  types.h
src/visu/: controller.cpp  controller.h  environment.cpp  environment.h  graphicsimulation.cpp  graphicsimulation.h  mainview.cpp  mainview.h  plant.cpp  plant.h  qtconversions.hpp
src/visu/tools/: fastforwarddialog.cpp  fastforwarddialog.h  smoothdurations.hpp
